clean up find bugs issues.  cut partition test member cardinality in half for gossip tests.